Fixed made the preview images responsive, and added zindex to the header so it does not appear behind other elements on the page

--- a/client/src/styles/LandingPage/_header.sass
+++ b/client/src/styles/LandingPage/_header.sass
@@ -7,6 +7,7 @@ $font1: 'Oxygen', sans-serif
   padding: 1em
   background-color: #2a2a2a
   border-bottom: 2px solid #262626
+  z-index: 999;
 
   h1 
     font-size: 25px
